fixed layout issues

--- a/css/brands.css
+++ b/css/brands.css
@@ -2,7 +2,7 @@
 	background-color: #f5f5f5;
 }
 .content_brand{
-    max-width: 1170px;
+    max-width: 1050px;
     margin: 0 auto;
     padding: 60px 0 60px 0;
     text-align: center;
