--- a/css/services.css
+++ b/css/services.css
@@ -1,13 +1,13 @@
 .section2{
 	background-color: #f5f5f5;
+	padding-top: 100px;
 }
 .title{
 	text-align: center;
-	padding-bottom: 100px;
 }
 .title_description{
 	text-align: center;
-	margin-top: -80px;
+	margin-bottom: -60px;
 }
 .column{
 	margin: 0 auto;
